# 2DIllumination

./: .gitignore  CMakeLists.txt  README.md  Sprite-0001.aseprite  cave.png~  circle.aseprite  compile.bat  flashlight.aseprite  gem.aseprite  run.bat  setup.bat  square.aseprite  tree.aseprite
src/: clock.h  imgui.ini  main.cpp  main_aio.cpp  main_compute.cpp  render.cpp  render.h  ring.h  shaders.cpp  shaders.h
src/gl/: glad.c  glad.h
src_assets/: cave.kra  cave.kra~  cave.png~
src_bad/: backend.cpp  backend.h  frontend.h  main.cpp  r.cpp  r.h  render.cpp  render.h  renderer.h  simplest.h
src_bad/gl/: buffer.cpp  buffer.h
src_bad/render/: async_buffer.cpp  async_buffer.h
unused_but_ok/: render.cpp  render.h
